--- a/packages/openapi-ts/package.json
+++ b/packages/openapi-ts/package.json
@@ -80,7 +80,8 @@
     "@apidevtools/json-schema-ref-parser": "11.7.2",
     "c12": "2.0.1",
     "commander": "12.1.0",
-    "handlebars": "4.7.8"
+    "handlebars": "4.7.8",
+    "pluralize": "8.0.0"
   },
   "peerDependencies": {
     "typescript": "^5.x"
