--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   "dependencies": {
     "@hey-api/client-fetch": "0.8.3",
     "@tanstack/react-query": "5.61.3",
-    "pnpm": "9.14.4"
+    "pnpm": "9.14.4",
+    "qs": "6.14.0"
   }
 }
