--- a/packages/client-fetch/package.json
+++ b/packages/client-fetch/package.json
@@ -63,5 +63,11 @@
     "test:watch": "vitest watch",
     "test": "vitest run",
     "typecheck": "vitest --typecheck --watch=false"
+  },
+  "dependencies": {
+    "qs": "^6.14.0"
+  },
+  "devDependencies": {
+    "@types/qs": "^6.9.18"
   }
 }
