--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "vitest": "1.6.0"
   },
   "dependencies": {
+    "@eslint/js": "9.22.0",
     "@hey-api/client-fetch": "0.8.3",
     "@tanstack/react-query": "5.61.3",
     "pnpm": "9.14.4",
