--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openapi-ts-monorepo",
+  "name": "fork-hey-sdk",
   "version": "0.1.0",
   "description": "Public @hey-api monorepo",
   "private": false,
