--- a/package.json
+++ b/package.json
@@ -3,21 +3,15 @@
   "version": "0.1.0",
   "description": "Public @hey-api monorepo",
   "private": false,
-  "homepage": "https://heyapi.dev",
+  "homepage": "https://github.com/abdulrahmanmousa/fork-hey-sdk.git",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hey-api/openapi-ts.git"
-  },
-  "bugs": {
-    "url": "https://github.com/hey-api/openapi-ts/issues"
+    "url": "git+https://github.com/abdulrahmanmousa/fork-hey-sdk.git"
   },
   "license": "FSL-1.1-MIT",
   "author": {
-    "email": "lmenus@lmen.us",
-    "name": "Lubos Menus",
-    "url": "https://lmen.us"
+    "name": "fork-hey-sdk"
   },
-  "funding": "https://github.com/sponsors/hey-api",
   "type": "module",
   "scripts": {
     "build": "pnpm --recursive build",
@@ -64,7 +58,7 @@
   },
   "dependencies": {
     "@eslint/js": "9.22.0",
-    "@hey-api/client-fetch": "0.8.3",
+    "@abdulrahmanmousa/client-fetch": "0.1.0",
     "@tanstack/react-query": "5.61.3",
     "pnpm": "9.14.4",
     "qs": "6.14.0"
