updates to  npm

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "name": "fork-hey-sdk"
   },
   "type": "module",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "build": "pnpm --recursive build",
     "changeset": "changeset",
