--- a/packages/client-axios/package.json
+++ b/packages/client-axios/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fork-hey-sdk/client-axios",
-  "version": "0.5.0",
+  "version": "1.0.0",
   "description": "🚀 Axios client for `@fork-hey-sdk/openapi-ts` codegen.",
   "homepage": "https://github.com/abdulrahmanmousa/fork-hey-sdk",
   "repository": {
@@ -13,6 +13,9 @@
   "license": "MIT",
   "author": {
     "name": "Abdulrahman Mousa"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "keywords": [
     "axios",
