--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "git+https://github.com/abdulrahmanmousa/fork-hey-sdk.git"
   },
-  "license": "FSL-1.1-MIT",
+  "license": "MIT",
   "author": {
     "name": "fork-hey-sdk"
   },
