--- a/packages/client-core/package.json
+++ b/packages/client-core/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@fork-hey-sdk/client-core",
+  "name": "@ts-sdk-gen/client-core",
   "version": "0.5.0",
   "private": true,
   "type": "module",
-  "description": "Core utilities for type-safe @fork-hey-sdk/openapi-ts clients",
-  "homepage": "https://github.com/abdulrahmanmousa/fork-hey-sdk",
+  "description": "Core utilities for type-safe @ts-sdk-gen/openapi-ts clients",
+  "homepage": "https://github.com/abdulrahmanmousa/ts-sdk-gen",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/abdulrahmanmousa/fork-hey-sdk.git"
+    "url": "git+https://github.com/abdulrahmanmousa/ts-sdk-gen.git"
   },
   "bugs": {
-    "url": "https://github.com/abdulrahmanmousa/fork-hey-sdk/issues"
+    "url": "https://github.com/abdulrahmanmousa/ts-sdk-gen/issues"
   },
   "license": "MIT",
   "exports": {
