--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
   },
   "dependencies": {
     "@eslint/js": "9.22.0",
-    "@abdulrahmanmousa/client-fetch": "0.1.0",
+    "@ts-sdk-gen/client-fetch": "0.1.0",
     "@tanstack/react-query": "5.61.3",
     "pnpm": "9.14.4",
     "qs": "6.14.0"
