--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ts-sdk-gen/openapi-ts",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Public @hey-api monorepo",
   "private": false,
   "homepage": "https://github.com/abdulrahmanmousa/ts-sdk-gen.git",
@@ -12,10 +12,39 @@
   "author": {
     "name": "ts-sdk-gen"
   },
-  "type": "module",
   "workspaces": [
     "packages/*"
   ],
+  "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      },
+      "require": {
+        "types": "./dist/index.d.cts",
+        "default": "./dist/index.cjs"
+      }
+    },
+    "./internal": {
+      "import": {
+        "types": "./dist/internal.d.ts",
+        "default": "./dist/internal.js"
+      },
+      "require": {
+        "types": "./dist/internal.d.cts",
+        "default": "./dist/internal.cjs"
+      }
+    },
+    "./package.json": "./package.json"
+  },
+  "bin": {
+    "openapi-ts": "bin/index.cjs"
+  },
   "scripts": {
     "build": "pnpm --recursive build",
     "changeset": "changeset",
