--- a/packages/openapi-ts/tsconfig.json
+++ b/packages/openapi-ts/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "declaration": true,
+    "declaration": false,
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
