--- a/packages/openapi-ts/package.json
+++ b/packages/openapi-ts/package.json
@@ -76,7 +76,8 @@
     "c12": "2.0.1",
     "commander": "12.1.0",
     "handlebars": "4.7.8",
-    "pluralize": "8.0.0"
+    "pluralize": "8.0.0",
+    "prompts": "2.4.2"
   },
   "peerDependencies": {
     "typescript": "^5.x"
@@ -93,15 +94,16 @@
     "@angular/platform-browser": "19.0.0",
     "@angular/platform-browser-dynamic": "19.0.0",
     "@angular/router": "19.0.0",
-    "@ts-sdk-gen/client-axios": "workspace:*",
-    "@ts-sdk-gen/client-fetch": "workspace:*",
     "@tanstack/angular-query-experimental": "5.61.3",
     "@tanstack/react-query": "5.61.3",
     "@tanstack/solid-query": "5.51.21",
     "@tanstack/svelte-query": "5.61.3",
     "@tanstack/vue-query": "5.61.3",
+    "@ts-sdk-gen/client-axios": "workspace:*",
+    "@ts-sdk-gen/client-fetch": "workspace:*",
     "@types/cross-spawn": "6.0.6",
     "@types/express": "4.17.21",
+    "@types/prompts": "2.4.9",
     "axios": "1.7.7",
     "cross-spawn": "7.0.5",
     "eslint": "9.6.0",
