--- a/examples/openapi-ts-axios/package.json
+++ b/examples/openapi-ts-axios/package.json
@@ -12,7 +12,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@hey-api/client-axios": "workspace:*",
+    "@ts-sdk-gen/client-axios": "workspace:*",
     "@radix-ui/react-form": "0.1.0",
     "@radix-ui/react-icons": "1.3.2",
     "@radix-ui/themes": "3.1.6",
