--- a/examples/openapi-ts-tanstack-angular-query-experimental/package.json
+++ b/examples/openapi-ts-tanstack-angular-query-experimental/package.json
@@ -31,7 +31,7 @@
     "@angular-devkit/build-angular": "^19.0.1",
     "@angular/cli": "^19.0.1",
     "@angular/compiler-cli": "^19.0.0",
-    "@ts-sdk-gengen/openapi-ts": "workspace:*",
+    "@ts-sdk-gen/openapi-ts": "workspace:*",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
