--- a/examples/openapi-ts-tanstack-react-query/package.json
+++ b/examples/openapi-ts-tanstack-react-query/package.json
@@ -22,7 +22,7 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@ts-sdk-gengen/openapi-ts": "workspace:*",
+    "@ts-sdk-gen/openapi-ts": "workspace:*",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "7.15.0",
