--- a/examples/openapi-ts-tanstack-svelte-query/package.json
+++ b/examples/openapi-ts-tanstack-svelte-query/package.json
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "@fontsource/fira-mono": "5.0.0",
-    "@ts-sdk-gengen/openapi-ts": "workspace:*",
+    "@ts-sdk-gen/openapi-ts": "workspace:*",
     "@neoconfetti/svelte": "2.0.0",
     "@sveltejs/adapter-auto": "3.0.0",
     "@sveltejs/kit": "2.8.3",
