--- a/examples/openapi-ts-tanstack-vue-query/package.json
+++ b/examples/openapi-ts-tanstack-vue-query/package.json
@@ -24,7 +24,7 @@
     "vue-router": "4.4.5"
   },
   "devDependencies": {
-    "@ts-sdk-gengen/openapi-ts": "workspace:*",
+    "@ts-sdk-gen/openapi-ts": "workspace:*",
     "@rushstack/eslint-patch": "1.10.4",
     "@tsconfig/node20": "20.1.4",
     "@types/jsdom": "21.1.7",
