--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,16 +1,11 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@2.3.1/schema.json",
-  "access": "public",
-  "baseBranch": "main",
-  "changelog": [
-    "@changesets/changelog-github",
-    {
-      "repo": "ts-sdk-gen/openapi-ts"
-    }
-  ],
+  "changelog": ["@changesets/changelog-github", { "repo": "abdulrahmanmousa/ts-sdk-gen" }],
   "commit": false,
   "fixed": [],
-  "ignore": [],
   "linked": [],
-  "updateInternalDependencies": "patch"
+  "access": "public",
+  "baseBranch": "main",
+  "updateInternalDependencies": "patch",
+  "ignore": []
 }
